--- a/incognito/Base.lproj/LaunchScreen.storyboard
+++ b/incognito/Base.lproj/LaunchScreen.storyboard
@@ -18,26 +18,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bitmap" translatesAutoresizingMaskIntoConstraints="NO" id="4kR-dd-1OJ">
-                                <rect key="frame" x="95" y="20" width="224" height="350"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon2" translatesAutoresizingMaskIntoConstraints="NO" id="4kR-dd-1OJ">
+                                <rect key="frame" x="114" y="188" width="187" height="200"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4kR-dd-1OJ" secondAttribute="bottom" constant="366" id="Jw0-x9-vvv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4kR-dd-1OJ" secondAttribute="bottom" constant="348" id="Jw0-x9-vvv"/>
                             <constraint firstItem="4kR-dd-1OJ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="LYr-WB-zvG"/>
-                            <constraint firstItem="4kR-dd-1OJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="VRY-NP-6tk"/>
-                            <constraint firstItem="4kR-dd-1OJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="95" id="nTK-l1-qIu"/>
+                            <constraint firstItem="4kR-dd-1OJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="168" id="VRY-NP-6tk"/>
+                            <constraint firstItem="4kR-dd-1OJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="114" id="nTK-l1-qIu"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.724637681159422" y="374.18478260869568"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Bitmap" width="240" height="406"/>
+        <image name="icon2" width="600" height="600"/>
     </resources>
 </document>
